--- a/src/CG.Business/Properties/Resources.resx
+++ b/src/CG.Business/Properties/Resources.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ServiceCollectionExtensions_EmptyStrategyName" xml:space="preserve">
+    <value>Despite our best efforts, you've somehow managed to call the '{0}' method with an empty strategy name! Please correct the strategy name in the associated options and try again.</value>
+  </data>
   <data name="ServiceCollectionExtensions_MethodNotFound" xml:space="preserve">
-    <value>Failed to locate an extension method named: '{0}' accepting an IConfiguration argument. Do you have the corresponding assembly loaded, or otherwise referenced, by the AppDomain?</value>
+    <value>Failed to locate an extension method named: '{0}' accepting IServiceCollection and IConfiguration arguments. Do you have the corresponding assembly loaded, or specified for loading?</value>
   </data>
 </root>
