--- a/src/CG.Business/Properties/Resources.resx
+++ b/src/CG.Business/Properties/Resources.resx
@@ -117,10 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="RepositoryOptions_Strategy" xml:space="preserve">
+    <value>Repository options require a 'Strategy' field and it appears to be missing, or empty. Check the configuration to ensure that it contains a 'Strategy' field under the 'Repositories' section. Also, ensure that you're binding to the properties above the 'Repositories' section, so that the binding operation won't fail and the options will validate properly.</value>
+  </data>
   <data name="ServiceCollectionExtensions_EmptyStrategyName" xml:space="preserve">
     <value>Despite our best efforts, you've somehow managed to call the '{0}' method with an empty strategy name! Please correct the strategy name in the associated options and try again.</value>
   </data>
   <data name="ServiceCollectionExtensions_MethodNotFound" xml:space="preserve">
-    <value>Failed to locate an extension method named: '{0}' accepting IServiceCollection and IConfiguration arguments. Do you have the corresponding assembly loaded, or specified for loading?</value>
+    <value>Failed to locate an extension method named: '{0}' accepting IServiceCollection and IConfiguration arguments. Do you have the corresponding assembly loaded, or specified for loading in the configuration? Also, is the strategy name correct?</value>
+  </data>
+  <data name="ServiceCollectionExtensions_NoLoadAssembly" xml:space="preserve">
+    <value>Unable to load the specified assembly: '{0}'. If this is a path to an assembly, is it correct? If this is an assembly name, is the corresponding dll file in your path? See inner exception(s) for more detail.</value>
   </data>
 </root>
