--- a/src/CG.Business/Properties/Resources.resx
+++ b/src/CG.Business/Properties/Resources.resx
@@ -126,6 +126,15 @@
   <data name="CrudStoreBase_UpdateAsync" xml:space="preserve">
     <value>{0} failed to update a {1}! parameter: {2}. See inner exception(s) for more detail.</value>
   </data>
+  <data name="KeyUtility_KeyType" xml:space="preserve">
+    <value>The KeyUtility doesn't know how to deal with a key of type: '{0}'.</value>
+  </data>
+  <data name="LinqRepositoryOptions_CS" xml:space="preserve">
+    <value>LinqRepository options require a 'ConnectionString' field and it appears to be missing, or empty. </value>
+  </data>
+  <data name="LoaderOptions_Strategy" xml:space="preserve">
+    <value>Loader strategy options require a 'Strategy' field and it appears to be missing, or empty. </value>
+  </data>
   <data name="RepositoryOptions_Strategy" xml:space="preserve">
     <value>Repository options require a 'Strategy' field and it appears to be missing, or empty. Check the configuration to ensure that it contains a 'Strategy' field under the 'Repositories' section. Also, ensure that you're binding to the properties above the 'Repositories' section, so that the binding operation won't fail and the options will validate properly.</value>
   </data>
