--- a/src/CG.Business/Properties/Resources.resx
+++ b/src/CG.Business/Properties/Resources.resx
@@ -135,8 +135,8 @@
   <data name="LinqRepositoryOptions_CS" xml:space="preserve">
     <value>LinqRepository options require a 'ConnectionString' field and it appears to be missing, or empty. </value>
   </data>
-  <data name="LoaderOptions_Strategy" xml:space="preserve">
-    <value>Loader strategy options require a 'Strategy' field and it appears to be missing, or empty. </value>
+  <data name="LoaderOptions_Name" xml:space="preserve">
+    <value>Loader strategy options require a 'Name' field and it appears to be missing, or empty. </value>
   </data>
   <data name="MethodNotFound" xml:space="preserve">
     <value>Failed to locate an extension method named: '{0}' accepting IServiceCollection and IConfiguration arguments. Do you have the corresponding assembly loaded, or specified for loading in the configuration? Also, is the strategy name correct?</value>
@@ -144,13 +144,10 @@
   <data name="NoLoadAssembly" xml:space="preserve">
     <value>Unable to load the specified assembly: '{0}'. If this is a path to an assembly, is it correct? If this is an assembly name, is the corresponding dll file in your path? See inner exception(s) for more detail.</value>
   </data>
-  <data name="RepositoryOptions_Strategy" xml:space="preserve">
-    <value>Repository options require a 'Strategy' field and it appears to be missing, or empty. Check the configuration to ensure that it contains a 'Strategy' field under the 'Repositories' section. Also, ensure that you're binding to the properties above the 'Repositories' section, so that the binding operation won't fail and the options will validate properly.</value>
-  </data>
   <data name="ServiceCollectionExtensions_MethodNotFound2" xml:space="preserve">
     <value>Failed to locate an extension method named: '{0}' accepting {1} and IConfiguration arguments. Do you have the corresponding assembly loaded, or specified for loading in the configuration? Also, is the strategy name correct?</value>
   </data>
-  <data name="StrategyOptions_Strategy" xml:space="preserve">
-    <value>Strategy options require a 'Strategy' field and it appears to be missing, or empty. Check the configuration to ensure that it contains a 'Strategy' field under the 'Strategies' section. Also, ensure that you're binding to the properties above the 'Strategies' section, so that the binding operation won't fail and the options will validate properly.</value>
+  <data name="WrongSection" xml:space="preserve">
+    <value>{0} error! It appears the method was called using the '{1}' configuration section. The method should be called using the '{2}' section.</value>
   </data>
 </root>
