--- a/src/CG.Business/Properties/Resources.resx
+++ b/src/CG.Business/Properties/Resources.resx
@@ -117,23 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CrudStoreBase_AddAsync" xml:space="preserve">
-    <value>{0} failed to add a new {1}! parameter: {2}. See inner exception(s) for more detail.</value>
-  </data>
-  <data name="CrudStoreBase_DeleteAsync" xml:space="preserve">
-    <value>{0} failed to delete a {1}! parameter: {2}. See inner exception(s) for more detail.</value>
-  </data>
-  <data name="CrudStoreBase_UpdateAsync" xml:space="preserve">
-    <value>{0} failed to update a {1}! parameter: {2}. See inner exception(s) for more detail.</value>
-  </data>
   <data name="EmptyStrategyName" xml:space="preserve">
     <value>Despite our best efforts, you've somehow managed to call the '{0}' method with an empty strategy name! Please correct the strategy name in the associated options and try again.</value>
-  </data>
-  <data name="KeyUtility_KeyType" xml:space="preserve">
-    <value>The KeyUtility doesn't know how to deal with a key of type: '{0}'.</value>
-  </data>
-  <data name="LinqRepositoryOptions_CS" xml:space="preserve">
-    <value>LinqRepository options require a 'ConnectionString' field and it appears to be missing, or empty. </value>
   </data>
   <data name="LoaderOptions_Name" xml:space="preserve">
     <value>Loader strategy options require a 'Name' field and it appears to be missing, or empty. </value>
@@ -141,11 +126,11 @@
   <data name="MethodNotFound" xml:space="preserve">
     <value>Failed to locate an extension method named: '{0}' accepting IServiceCollection and IConfiguration arguments. Do you have the corresponding assembly loaded, or specified for loading in the configuration? Also, is the strategy name correct?</value>
   </data>
+  <data name="MethodNotFound2" xml:space="preserve">
+    <value>Failed to locate an extension method named: '{0}' accepting {1} and IConfiguration arguments. Do you have the corresponding assembly loaded, or specified for loading in the configuration? Also, is the strategy name correct?</value>
+  </data>
   <data name="NoLoadAssembly" xml:space="preserve">
     <value>Unable to load the specified assembly: '{0}'. If this is a path to an assembly, is it correct? If this is an assembly name, is the corresponding dll file in your path? See inner exception(s) for more detail.</value>
-  </data>
-  <data name="ServiceCollectionExtensions_MethodNotFound2" xml:space="preserve">
-    <value>Failed to locate an extension method named: '{0}' accepting {1} and IConfiguration arguments. Do you have the corresponding assembly loaded, or specified for loading in the configuration? Also, is the strategy name correct?</value>
   </data>
   <data name="WrongSection" xml:space="preserve">
     <value>{0} error! It appears the method was called using the '{1}' configuration section. The method should be called using the '{2}' section.</value>
